# omniagent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  RELEASE.md  TODO.md  Vagrantfile  code-quality-report.md  docker-compose.mattermost.yml  docker-compose.yml  fix_result.py  inline_test.txt  mm_post.py  wiki-plan.md
.cargo/: config.toml
.sqlx/: query-01c2f4e8b2a5143d263936e4a3b711e5f1e4572a238744d24c9f7ea8668ed5b4.json  query-025ebce8bd8b7cfeb12e4adff8964414cebf96537ef772364d72c2e075a135f9.json  query-02a964ca065c3e62b1d9935ecc51fea89967aa4f4e513571a42acc30f5da119c.json  query-033274c2dd43623c7dbc64ce3435479770f6f7cd9e7745a760fb1c2501e6e2d2.json  query-0341bd3caa72dab9548979762ebc203e1082222225e105e4a33f47a811837300.json  query-047010844306a9844059ee24901a5451b21456ba35aa5734b507b949faedd542.json  query-05c356ae420ae649122e7cfeaeb6eb0a01556d7a72d31c507c643d353fa77bb4.json  query-079b01f216237ae444715bf4d69db88dc8a3dad05278b3bff756ea950087c968.json  query-0804b1baef7ce8afdfcd968cb65c48aacebda3df50ee05de16c7389eb57f76cb.json  query-083fc81e2d4b82f8cdaec39c65e1c9a7f1539a9c5a39e28e7e33c7a8a0d959f1.json  query-09789abcf31d8111e67faad5ea35bc91b80f3b9994a5f09c2a326d6925bd1383.json  query-0a5e48412084028c2905ff09c97aa07476c63204c223816a97fe841bc5f58647.json  query-0c25c7173f0de69224fa0dd0da28dc832510a4706bcac9ebf323237120e59d06.json  query-0c4b284413991fd37d5c627e3c54c2020fb528ff39e5772b9c43754e4831a286.json  query-0d40ba0e9c091bc7c82551106c09a9e2d46e8e3ab4b84e0d5251af0847ebf9d4.json  query-0e1ca36f29005890ca1d8e778acd0471dd13e433280669fe3800dffeb4b78cbd.json  query-0eb6b8dc155fcac586372800f6ee2d89943af23b3c374aa83bee31c81d3d196d.json  query-0f09601d5c0b9c136f1e69d9f57a1bd94993ed568f104e9bf3e74df1f6666586.json  query-0f09e5e703af09094a6d1d033e4a21377c1f63ac2b9567d1a87cf4bbcf971c9b.json  query-121c5432f2d2cde0ffeaedc3ee96e50239ed2148ee3b3bd97d95554791d70dc3.json  query-13a8daa8de683f15d7b44b298d8c4280cf259275abfb120ede2100949f59edbc.json  query-14140a1887f691702355b7f7e00b5bb33828766fd0a6470cef25f582f0e8817f.json  query-14e8a5388efb5c9956325ef47e353e9d0d06ba9dd8fa6463cd90251d8994792d.json  query-15a2688708b2fd499d89999c3dbbecd3b90a194545c5267fd6cdc40b8dfa9388.json  query-16064b295923bb6a2e90821d45796ae9aeb3147579c903281c5903c831e3bcb0.json  query-16717e15100ac08a47a5adb6a8f12a0614511e069eb78c403ef990f14e93df17.json  query-168809fcd84df0457486fe48240aaa17e043c28c29333f70ee31122d25b79009.json  query-16951ac6c6102d96b1d7893d3c8758915e850b03d60cfa79e7ad36df0c039626.json  query-16b8dc26ac857376dd0d9519c8f8c188ed374594e16d2dbfbb15b438cde69e46.json  query-181ff44d1003d46888b65f088b0553f4d6808bb9004c8ed341412d247d1eec52.json  query-193f0d0f5d75bdda40a3db7b29fbbf2f5e84e22f87ad45a8aa83ecc782c54f9f.json  query-1a0ae88ea78c8f3010305532d5e9f8bc4eee72d80133fef81cc90bb4c67fae2a.json  query-1a7d716f895ab054e189a152071e68caac3a8a756e82dfa0312e14309f40e75a.json  query-1aac1a2fe9371afbaa38032a0aa6d69721d3de7affe3a515ccd063a5b93ba2bf.json  query-1b6d9555fdf6e0a3230e20d3fb9117e617a37c8d111e0b2bee05b6715dbb9893.json  query-1c8198668ed41b72c4c4790e6fdb8db5fdb489b94442c5f2a09ffac5af9967e6.json  query-1dfd70b0e45907b0bfb51c2e477f9bcf37da9d1bbaf153d8cea21ae2f70b221b.json  query-1eb615304195e624695338d4dbedea3067d771728a8999a1ece2b7977bbac580.json  query-1eda926ae7baa59cd0ca8e645768b3a2f945b6da677411137b00b7b2717f04d9.json  query-203d95bf4107b8d50907d7c549072076f90397fa6a0a9016350da9ccd6da3efe.json  (+226 more)
config/: mcp-servers.json
dashboard/: index.html
dashboard/assets/: index-1NcF5H7V.css  index-BovQtjy-.js
db-migrations/: Cargo.toml
db-migrations/src/: lib.rs  main.rs
docs/debugging/: runtime-deadlock-and-infinite-loop.md
plugins/mcp/actions/: Cargo.toml
plugins/mcp/actions/src/: main.rs
plugins/mcp/test-rust-tool/: Cargo.toml  mcp-config.json  plugin.json
plugins/mcp/test-rust-tool/src/: main.rs
plugins/tools/cron/: Cargo.toml  plugin.json
plugins/tools/cron/src/: main.rs
plugins/tools/fetch/: Cargo.toml  mcp-config.json  plugin.json
plugins/tools/fetch/src/: main.rs
plugins/tools/filesystem/: Cargo.toml  mcp-config.json  plugin.json
plugins/tools/filesystem/src/: main.rs
plugins/tools/git/: Cargo.toml  mcp-config.json  plugin.json
plugins/tools/git/src/: main.rs
plugins/tools/hindsight/: Cargo.toml  mcp-config.json  plugin.json
plugins/tools/hindsight/src/: main.rs
plugins/tools/memory/: Cargo.toml  plugin.json
plugins/tools/memory/src/: main.rs
plugins/tools/metrics/: Cargo.toml  plugin.json
plugins/tools/metrics/src/: main.rs
plugins/tools/prompt/: Cargo.toml  mcp-config.json  plugin.json
plugins/tools/prompt/src/: chat_message.rs  compact.rs  main.rs  memory_store.rs  prompt_builder.rs
plugins/tools/skills/: Cargo.toml  mcp-config.json  plugin.json
plugins/tools/skills/src/: main.rs
plugins/tools/subtasks/: Cargo.toml  plugin.json
plugins/tools/subtasks/src/: main.rs
plugins/tools/util/: Cargo.toml
plugins/tools/util/src/: lib.rs
research/: plugin-architecture-redesign.md
scripts/: build.py  mcp-docker-server.py  mcp-git-server.py  mcp-test-server.py  prepare.py  run_group8.py  tests.py  tests_comprehensive.py
src/: actions.rs  cli.rs  commands.rs  complexity.rs  config.rs  context_builder.rs  error.rs  hindsight_populator.rs  lib.rs  main.rs  plugins_yaml.rs  prompt_builder.rs  relevance.rs  safety.rs  scheduler.rs
src/agent/: config.rs  context_builder.rs  executor.rs  fail_thread.rs  helpers.rs  kanban_updater.rs  main_loop.rs  mod.rs  plugin_manager.rs  reaction_handler.rs  response_handler.rs  summary_trigger.rs  task_registry.rs
src/db/: channels.rs  kanban.rs  memory.rs  messages.rs  migrations.rs  mod.rs  queries.rs  schedule.rs  schema.rs  stats.rs  subscriptions.rs  summaries.rs  threads.rs  types.rs
src/llm/: mod.rs  provider_config.rs
src/mcp/: memory_tools.rs  mod.rs  prompt_tools.rs  task_tools.rs
src/models/: action.rs  channel.rs  message.rs  mod.rs  profile.rs  thread.rs
tests/: api_tests.rs  plugin_tests.rs  run_group11.py  test_prompt_plugin.py
(+104 files in other folders)
