[package]
name = "omniagent"
version = "0.1.0"
edition = "2021"
description = "OmniAgent — Next-generation agent system with Rust, Postgres + pgvector, Telegram support"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = { version = "0.7", features = ["macros"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
pgvector = { version = "0.4", features = ["sqlx"] }
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
futures = "0.3"
once_cell = "1"
walkdir = "2"
glob = "0.3"
url = "2"
cron = "0.13"
sql-forge = "0.5.0"
base64 = "0.22"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
