[package]
name = "db-migrations"
version = "0.1.0"
edition = "2021"
description = "Standalone database migrator for OmniAgent — applies schema changes without building the full agent"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
serde_json = "1"
