[package]
name = "test-rust-tool"
version = "0.1.0"
edition = "2021"
description = "Test Rust MCP server for OmniAgent — implements a simple 'wait' tool"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = "0.4"
