[package]
name = "mcp-server-fetch"
version = "0.1.0"
edition = "2021"
description = "Fetch MCP server: HTTP GET tool using reqwest"

[dependencies]
mcp-server-util = { path = "../util" }
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["blocking"] }
