[package]
name = "mcp-server-git"
version = "0.1.0"
edition = "2021"
description = "Git/GitHub MCP server: create_github_repo, clone_repo, commit_and_push, status"

[dependencies]
mcp-server-util = { path = "../util" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
once_cell = "1"
