[package]
name = "mcp-server-hindsight"
version = "0.1.0"
edition = "2021"
description = "MCP server: hindsight memory recall tool"

[dependencies]
mcp-server-util = { path = "../util" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
