[package]
name = "mcp-server-metrics"
version = "0.1.0"
edition = "2021"
description = "Metrics MCP server - agent metrics (token usage, latency, groundedness, retrieval, corrections)"

[dependencies]
mcp-server-util = { path = "../util" }
omniagent = { path = "../../../" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "chrono"] }
sql-forge = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
