[package]
name = "mcp-server-prompt"
version = "0.1.0"
edition = "2021"
description = "Prompt generation MCP server - generates the full LLM prompt including system prompt, thread context, and message compaction"

[dependencies]
mcp-server-util = { path = "../util" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
