[package]
name = "mcp-server-skills"
version = "0.1.0"
edition = "2021"
description = "Skills MCP server: create_skill tool for reusable task procedures"

[dependencies]
mcp-server-util = { path = "../util" }
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
