[package]
name = "mcp-server-util"
version = "0.1.0"
edition = "2021"
description = "Shared MCP server framework: stdio JSON-RPC protocol, helper types"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
